--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 <footer>
   <p mt-8 text-xs op-30>
-    <span pr-1>Made by</span>
+    <!-- <span pr-1>Made by</span>
     <a
       b-slate-link
       href="https://ddiu.io" target="_blank"
@@ -13,6 +13,6 @@
       href="https://github.com/ddiu8081/chatgpt-demo" target="_blank"
     >
       Source Code
-    </a>
+    </a> -->
   </p>
 </footer>
